added some copula sheet 1 solutions

--- a/books/wt.bib
+++ b/books/wt.bib
@@ -1,3 +1,19 @@
+@article{RUSCHENDORF20093921,
+title = {On the distributional transform, Sklar's theorem, and the empirical copula process},
+journal = {Journal of Statistical Planning and Inference},
+volume = {139},
+number = {11},
+pages = {3921-3927},
+year = {2009},
+url = {https://www.sciencedirect.com/science/article/pii/S037837580900158X},
+author = {Ludger Rüschendorf},
+}
+@book{nelsen2006introduction,
+  title={An introduction to copulas},
+  author={Nelsen, Roger B},
+  year={2006},
+  publisher={Springer}
+}
 @book{foellmer2016,
    title =     {Stochastic Finance: An Introduction in Discrete Time},
    author =    {Hans Föllmer, Alexander Schied},
