started exercise 1 of sheet 13

--- a/books/wt.bib
+++ b/books/wt.bib
@@ -1,3 +1,10 @@
+@book{brigo2006interest,
+  title={Interest rate models-theory and practice: with smile, inflation and credit},
+  author={Brigo, Damiano and Mercurio, Fabio},
+  volume={2},
+  year={2006},
+  publisher={Springer}
+}
 @article{RUSCHENDORF20093921,
 title = {On the distributional transform, Sklar's theorem, and the empirical copula process},
 journal = {Journal of Statistical Planning and Inference},
