--- a/books/wt.bib
+++ b/books/wt.bib
@@ -1,3 +1,10 @@
+@article{ruschendorf2013mathematical,
+  title={Mathematical risk analysis},
+  author={R{\"u}schendorf, Ludger},
+  journal={Springer Ser. Oper. Res. Financ. Eng. Springer, Heidelberg},
+  year={2013},
+  publisher={Springer}
+}
 @book{brigo2006interest,
   title={Interest rate models-theory and practice: with smile, inflation and credit},
   author={Brigo, Damiano and Mercurio, Fabio},
