removed undone exercises

--- a/hwcopula/02/sol/sheet_02.tex
+++ b/hwcopula/02/sol/sheet_02.tex
@@ -57,6 +57,7 @@ Analogously we can write
     \intertext{Since $C_1(u,v)=P({U\leq u},{V\leq v})$ with $U\sim V\sim\operatorname{U}(0,1)$, we have $\int_{[0,1]^2}dC_1(u,v)=1$ and $\int_{[0,1]^2}udC_1(u,v)=\int_{[0,1]^2}vdC_1(u,v)=\frac{1}{2}$, so that also in this case we end up with}
   &=\int_{[0,1]^2}C_2(u,v)dC_1(u,v)\,.
 \end{align*}
+\pagebreak
 \paragraph{Exercise 2 \textnormal{(4 Points)}.}
 Let $(X,Y)$ be a vector of absolutely continuous random variables.
 Use the definition of $Q$ in (\ref{eq:q}) to show that
@@ -82,6 +83,7 @@ Spearman's $\rho$ is given by
     Since $(X_2,Y_2)$ and $(X_3,Y_3)$ are independent, $C_2=\Pi$ so that we get}
   &=Q(C,\Pi)\,.
 \end{align*}
+\pagebreak
 \paragraph{Exercise 3 \textnormal{(4 Points)}.}
 Show that $3Q(C,\Pi)=12\int_0^1\int_0^1(C(u,v)-uv)dudv$.
 
@@ -104,10 +106,6 @@ which is true, because $0\leq P[(X_1-X_2)(Y_1-Y_3)>0]\leq1$ and $0\leq P[(X_1-X_
 \end{itemize}
 which is true, because then $C(u,v)=\min(u,v)$ so that $3Q(C,\Pi)=12\int_0^1\int_0^1(\min(u,v)-uv)dudv=1$.
 \begin{itemize}
-\item [2.3.] $\rho(X,-X)=-1$
-\end{itemize}
-\emph{which remains to be shown.}
-\begin{itemize}
 \item [3.] $\rho(X,Y)=\rho(Y,X)$
 \end{itemize}
 which follows from $Q$ being symmetric in its arguments.
@@ -115,10 +113,6 @@ which follows from $Q$ being symmetric in its arguments.
 \item [4.] If $X$ and $Y$ are independent, then $\rho(X,Y)=0$
 \end{itemize}
 which follows from the fact that then $C(u,v)=uv$ so that $C(u,v)-uv=0$.
-\begin{itemize}
-\item [5.] $\rho(-X,Y)=\rho(X,-Y)=-\rho(X,Y)$
-\end{itemize}
-\emph{which remains to be shown.}
 \begin{itemize}
 \item [6.] If $C_1$ and $C_2$ are copulas for $(X_1,Y_1)$ and $(X_2,Y_2)$ such that $C_1\prec C_2$ then $\rho(X_1,Y_1)\leq \rho(X_2,Y_2)$,
 \end{itemize}
