some more information for Exercise 3.iv

--- a/hwcopula/03/sol/sheet_03.tex
+++ b/hwcopula/03/sol/sheet_03.tex
@@ -41,7 +41,10 @@ Then
 \begin{itemize}
 \item [(iv)] $X\leq_{sm}Y\quad\implies\quad X\leq_{dcx}Y\implies\sum_{i=1}^dX_i\leq_{cx}\sum_{i=1}^dY_i$
 \end{itemize}
-See Remark 6.27.b in \cite{ruschendorf2013mathematical}.
+We follow remark 6.27.b in \cite{ruschendorf2013mathematical} to show that if $X\leq_{dcx}Y$ then $\sum_{i=1}^dX_i\leq_{cx}\sum_{i=1}^dY_i$.
+So let $X$, $Y$ so that $X\leq_{dcx}Y$, $f$ convex.
+Then $x\mapsto f\bigl(\sum_{i=1}^dx_i\bigr)$ is directionally convex, \emph{which still remains to be shown.}
+That means that $\sum_{i=1}^dX_i\leq_{cx}\sum_{i=1}^dY_i$ as wanted.
 \pagebreak
 \paragraph{Exercise 5 \textnormal{(4 Points; Bonus)}.} Show that the Markov product $A*B$ is a bivariate copula.
 
