--- a/hwcopula/03/sol/sheet_03.tex
+++ b/hwcopula/03/sol/sheet_03.tex
@@ -50,7 +50,7 @@ Because $f$ is convex, for $a,b\in\mathbb{R}$ and $0<\theta<1$ we know that
   \theta f(a)+(1-\theta)f(b)-f(\theta a+(1-\theta)b)
   &\geq0\,,
     \intertext{and also that}
-    (1-\theta) f(a)+(1-\theta)f(b)-f(\theta a+(1-\theta)b)
+    (1-\theta) f(a)+\theta f(b)-f((1-\theta) a+\theta b)
   &\geq0\,.
     \intertext{adding both inequalities and setting $a=\sum x_i$, $b=a+\varepsilon+\delta$ and $\theta=\frac{\varepsilon}{b-a}$ yields}
     f\Bigl(\sum x_i+\varepsilon+\delta\Bigr)-f\Bigl(\sum x_i+\varepsilon\Bigr)-f\Bigl(\sum x_i+\delta\Bigr)+f\Bigl(\sum x_i\Bigr)
