added sheet 4 exercise 1

--- a/books/wt.bib
+++ b/books/wt.bib
@@ -1,3 +1,10 @@
+ @misc{ enwiki:1254088858,
+    author = "{Wikipedia contributors}",
+    title = "Taylor's theorem --- {Wikipedia}{,} The Free Encyclopedia",
+    year = 2024,
+    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Taylor%27s_theorem&oldid=1254088858}",
+    note = "[Online; accessed 9-November-2024]"
+  }
 @article{ruschendorf2013mathematical,
   title={Mathematical risk analysis},
   author={R{\"u}schendorf, Ludger},
