--- a/books/wt.bib
+++ b/books/wt.bib
@@ -1,4 +1,25 @@
- @misc{ enwiki:1254088858,
+@article{cuchiero2013path,
+  title={Path properties and regularity of affine processes on general state spaces},
+  author={Cuchiero, Christa and Teichmann, Josef},
+  journal={S{\'e}minaire de probabilit{\'e}s XLV},
+  pages={201--244},
+  year={2013},
+  publisher={Springer}
+}
+@article{duffie,
+author = {D. Duffie and D. Filipović and W. Schachermayer},
+title = {{Affine processes and applications in finance}},
+volume = {13},
+journal = {The Annals of Applied Probability},
+number = {3},
+publisher = {Institute of Mathematical Statistics},
+pages = {984 -- 1053},
+keywords = {Affine process, Characteristic function, continuous-state branching with immigration, default risk, infinitely decomposable, interest rates, option pricing, Ornstein-Uhlenbeck type},
+year = {2003},
+doi = {10.1214/aoap/1060202833},
+URL = {https://doi.org/10.1214/aoap/1060202833}
+}
+@misc{ enwiki:1254088858,
     author = "{Wikipedia contributors}",
     title = "Taylor's theorem --- {Wikipedia}{,} The Free Encyclopedia",
     year = 2024,
