--- a/hwsi/07/sol/07.tex
+++ b/hwsi/07/sol/07.tex
@@ -51,7 +51,7 @@ Mit der Ito-Formel ergibt sich
     \intertext{wodurch wir in integraler Schreibweise haben, dass}
     h(t,\rho_t)
   &=h(t_0,\rho_{t_0})+\int_{t_0}^te^{(t_0-t+s)\beta}\alpha(s)ds+\int_{t_0}^te^{(t_0-t+s)}\sigma dW_s\,,
-    \intertext{wobei $h(t_0,\rho_{t_0})=\rho_{t_0}$ Durch Multiplizieren der Gleichung mit $e^{(t_0-t)\beta}$ kriegen wir schließlich}
+    \intertext{wobei $h(t_0,\rho_{t_0})=\rho_{t_0}$ Durch Multiplizieren der Gleichung mit $e^{(t-t_0)\beta}$ kriegen wir schließlich}
     \rho_t
   &=e^{(t-t_0)\beta}x+\int_{t_0}^te^{(t-s)\beta}\alpha(s)ds+\int_{t_0}^te^{(t-s)\beta}\sigma dW_s\,,
 \end{align*}
