exercise 1 of sheet 8

--- a/books/wt.bib
+++ b/books/wt.bib
@@ -1,3 +1,11 @@
+@misc{schweizer,
+  title={Introduction to Mathematical finance},
+  author = {Martin Schweizer},
+  howpublished = {\url{https://metaphor.ethz.ch/x/2018/fs/401-3888-00L/appendix/A6_Komlos.pdf}},
+  note = {Accessed: 2024-12-08},
+  year = 2018
+
+}
 @article{cuchiero2013path,
   title={Path properties and regularity of affine processes on general state spaces},
   author={Cuchiero, Christa and Teichmann, Josef},
