--- a/books/wt.bib
+++ b/books/wt.bib
@@ -1,3 +1,17 @@
+@Inbook{Protter2005,
+author="Protter, Philip E.",
+title="Semimartingales and Stochastic Integrals",
+bookTitle="Stochastic Integration and Differential Equations",
+chapter="III",
+year="2005",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="51--100",
+abstract="The purpose of the theory of stochastic integration is to give a reasonable meaning to the idea of a differential to as wide a class of stochastic processes as possible. We saw in Sect. 8 of Chap. I that using Stieltjes integration on a path-by-path basis excludes such fundamental processes as Brownian motion, and martingales in general. Markov processes also in general have paths of unbounded variation and are similarly excluded. Therefore we must find an approach more general than Stieltjes integration.",
+isbn="978-3-662-10061-5",
+doi="10.1007/978-3-662-10061-5_3",
+url="https://doi.org/10.1007/978-3-662-10061-5_3"
+}
 @misc{schweizer,
   title={Introduction to Mathematical finance},
   author = {Martin Schweizer},
