added sheet 10 ex 1.

--- a/books/wt.bib
+++ b/books/wt.bib
@@ -1,3 +1,15 @@
+@article{Bouchard_2015,
+   title={Arbitrage and duality in nondominated discrete-time models},
+   volume={25},
+   ISSN={1050-5164},
+   url={http://dx.doi.org/10.1214/14-AAP1011},
+   DOI={10.1214/14-aap1011},
+   number={2},
+   journal={The Annals of Applied Probability},
+   publisher={Institute of Mathematical Statistics},
+   author={Bouchard, Bruno and Nutz, Marcel},
+   year={2015},
+   month=apr}
 @Inbook{Protter2005,
 author="Protter, Philip E.",
 title="Semimartingales and Stochastic Integrals",
