--- a/books/wt.bib
+++ b/books/wt.bib
@@ -1,3 +1,9 @@
+@article{schmelzle2010option,
+  title={Option pricing formulae using Fourier transform: Theory and application},
+  author={Schmelzle, Martin},
+  journal={Preprint, http://pfadintegral. com},
+  year={2010}
+}
 @article{Bouchard_2015,
    title={Arbitrage and duality in nondominated discrete-time models},
    volume={25},
